# stateful-indecision

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-entrypoint.sh  pyproject.toml  run_config.json  run_config_beta_a1.json  run_config_beta_a2.json  run_config_beta_a3.json  run_config_oss_llamacpp.json  run_config_oss_local.example.json
.github/: pull_request_template.md
_plans/: auton_and_agent_layers.md  quarterly_review_checklist.md  run_log_template.md  s3_data_offload_design.md  v2_architecture_notes.md
adapters/: __init__.py  anthropic.py  base.py  mock.py  openai_adapter.py
agent/: __init__.py  __main__.py  constitution_manager.py  decision.py  executor.py  notebook.py  policy.py  runner.py  state_builder.py
core/: __init__.py  canonical_json.py  timestamps.py  verifier.py  writer.py
docs/: ecosystem-bootstrap.md  shared-knowledge-s3-batch.md
forums/: __init__.py  base.py  commons.py  roundtable.py  t1_pulse.py  townhall.py
infra/: __init__.py  embeddings.py  entrypoint_supervisor.py  env.py  llm_client.py  object_store.py  s3_sync.py  shared_knowledge.py  shared_knowledge_s3.py  storage.py  vector_store.py
mult_team_test_1/: README.md  constitution_comm_sandbox_seed.md  fields_comm_coordination.json  run_config_mt1_team_a_lead.json  run_config_mt1_team_a_tasker.json  run_config_mt1_team_b_lead.json  run_config_mt1_team_b_tasker.json
mult_team_test_2/: README.md  constitution_checker.md  constitution_lead_researcher.md  constitution_tasker_artiforge.md  fields_multi_team_autonomous_research.json  prompt_pack_multi_team_autonomous_research.json  run_config_mt2_checker.json  run_config_mt2_lead.json  run_config_mt2_tasker.json
prompts/: sage_team_prompts.json
safety/: __init__.py  firewalls.py  kill_switch.py  kill_switch_rubric.md
schemas/: __init__.py  action_vocabulary.py  constitution.py  events.py  shared_knowledge.py  state.py
seeds/: action_vocabulary.json  constitution_seed.md  field_list.json
tests/: test_action_vocabulary.py  test_adapter_openai_base_url.py  test_agent_run.py  test_batch_etl.py  test_canonical_json.py  test_chain.py  test_firewall.py  test_forums.py  test_notebook_novelty.py  test_prompt_pack_integration.py  test_s3_sync.py  test_shared_knowledge.py  test_shared_knowledge_s3_batch.py  test_visitor_briefing_and_progression.py  test_wave1_contracts.py  test_wave2_memory.py  test_wave2_wave3_controls.py  test_wave3_safety.py  test_wave4_observability.py  test_wave5_formalism.py  test_wave_e1_memory_exposure.py  test_wave_e2_map_reduce.py  test_wave_e3_ecosystem_id.py  test_wave_e4_promotion.py
tools/: README-Grafana.md  README-Level1-Adaptation.md  __init__.py  analyze_alpha.py  analyze_run.py  batch_etl.py  check_run_config_hashes.py  consolidate_notebook.py  diff_constitution.py  export_event_schemas.py  export_to_sqlite.py  export_trajectories.py  fork_probe.py  grafana_dashboard_template.json  grafana_starter_queries.sql  hf_compare_runs.py  index_research.py  index_shared_knowledge.py  ingest_corpora.py  ingest_research.py  ingest_shared_knowledge.py  inspect_ledger.py  materialize_shared_grants.py  merge_chains.py  notebook_novelty.py  promote_shared_knowledge.py  publish_shared_knowledge.py  trace.py  (+5 more)
(+51 files in other folders)
