[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stateful-indecision"
version = "1.0.0"
description = "Ledger-first agent research runtime with hash-chained verification."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "stateful-indecision maintainers" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "anthropic>=0.40,<1",
    "python-dotenv>=1.0,<2",
    "boto3>=1.43.3",
    "openai>=2.35.1",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]
s3 = [
    "boto3>=1.34,<2",
]
etl = [
    "pyarrow>=15,<20",
]
rag = [
    "chromadb>=0.5",
    "voyageai>=0.3",
]
local-llm = [
    "llama-cpp-python>=0.3.22",
    "uvicorn[standard]>=0.46",
    "fastapi>=0.136",
    "sse-starlette>=3.4",
    "starlette-context>=0.5",
    "pydantic-settings>=2.14",
]
charts = [
    "matplotlib>=3.9,<4",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires live LLM API key",
]

[tool.setuptools]
packages = ["adapters", "agent", "core", "forums", "infra", "safety", "schemas", "tools", "workload"]
